--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -7,10 +7,12 @@
             position: fixed;
             right: 0;
             top: 0;
-            height: 100vh;
+			height: 100vh;
             overflow-y: auto;
             transition: transform 0.3s ease;
 			text-align: center;
+			z-index: 998;
+			display: block;
         }
         
         /* 手机上的侧边栏触发器 */
@@ -27,7 +29,7 @@
             border-top-left-radius: 5px;
             border-bottom-left-radius: 5px;
             cursor: pointer;
-            z-index: 1000;
+            z-index: 995;
             text-align: center;
             line-height: 60px;
             font-size: 20px;
@@ -38,6 +40,7 @@
 		  background-color: rgba(200,200,200,1);
         }
         
+
 /* 修改模态框样式 */
 .modal {
     display: none;
@@ -47,7 +50,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    z-index: 1001;
+    z-index: 997;
     overflow: auto; /* 允许整个模态框滚动 */
     padding: 20px 0; /* 添加上下内边距 */
 }
@@ -130,4 +133,9 @@
 /* 当count为0时隐藏角标 */
 .sidebar-badge[data-count="0"] {
     display: none;
+}
+
+.sidebar-content {
+	height: 90%;
+    overflow-y: auto;
 }
