--- a/css/deck_show.css
+++ b/css/deck_show.css
@@ -1,12 +1,12 @@
 #deck-show-grid {
-            display: grid;
-            grid-template-columns: repeat(8, 1fr);
-            gap: 10px; /* 图片间距 */
-            width: 100%;
-			margin-top: 50px;
-        }
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    gap: 10px; /* 图片间距 */
+    width: 100%;
+	margin-top: 50px;
+}
 		
 #capture {
 	display: none;
-	width: 100%;
+	width: 1200px;
 }
