--- a/css/progressbar.css
+++ b/css/progressbar.css
@@ -1,5 +1,12 @@
 #loading-container {
+	margin: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 	width:100%;
+	height: 30px;
 	background:#f1f1f1;
 	position: fixed;
 	z-index: 1004;
