--- a/DIY/css/index.css
+++ b/DIY/css/index.css
@@ -52,17 +52,22 @@
 	border: 2px solid green;
 }
 
-#faction
+#faction-container
 {
     position: absolute;
-    left: 423px;
-    top: 27px;
-	width: 53px;
-	height: 53px;
+    left: 418px;
+    top: 29px;
+	width: 63px;
+	height: 50px;
+    text-align: center;
 }
-#faction:hover
+#faction-container:hover
 {
 	border: 2px solid green;
+}
+#faction
+{
+	height: 100%;
 }
 
 #main
